--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,11 +7,17 @@ environment:
   sdk: ^3.7.0
 
 dependencies:
+  cloud_firestore: ^5.6.5
+  firebase_auth: ^5.5.1
   firebase_core: ^3.12.1
+  url_launcher: ^6.1.7
+  http: ^1.1.0
   flutter:
     sdk: flutter
   flutter_svg: ^2.0.17
   google_fonts: ^6.2.1
+  flutter_web_auth: ^0.5.0
+  universal_html: ^2.2.4
 
 dev_dependencies:
   flutter_test:
